# COMP3811-CW2

./: CMakeLists.txt  README.md  my.scene
lib/: CMakeLists.txt
lib/assimp/test/models/PLY/: cube_out.ply
lib/assimp/test/models/glTF2/BoxTextured-glTF/: BoxTextured_out.gltf  BoxTextured_out.mtl
lib/assimp/test/models/glTF2/BoxTextured-glTF-Embedded/: BoxTextured_out.mtl
lib/imgui/: CMakeLists.txt
lib/imguizmo/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
res/shader/default/: default.frag  default.vert  depth_default.frag  depth_default.vert
res/shader/firecube/: firecube.frag
res/shader/grass/: grass.vert
src/: CMakeLists.txt  main.cpp
src/scene/: scene.cpp  scene.h
src/scene/object/: object.cpp  object.h
src/scene/object/components/: camera.cpp  camera.h  component.cpp  component.h  light.cpp  light.h  transform.cpp  transform.h
src/scene/object/components/renderer/: cubeRenderer.cpp  cubeRenderer.h  meshRenderer.cpp  meshRenderer.h  planeRenderer.cpp  planeRenderer.h  renderer.h  sphereRenderer.cpp  sphereRenderer.h
src/scene/object/script/: script.h
src/scene/object/scripts/: bobAndSpin.cpp  bobAndSpin.h  script.cpp  script.h  sunMoonCycle.cpp  sunMoonCycle.h
src/scene/object/scripts/camera/: editCamera.cpp  editCamera.h
src/ui/: assets.cpp  assets.h  inspector.cpp  inspector.h  objectHierarchy.cpp  objectHierarchy.h  overview.cpp  overview.h  window.h
src/util/: ebo.cpp  ebo.h  fbo.cpp  fbo.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
(+1 files in other folders)
